--- a/Data.html
+++ b/Data.html
@@ -47,7 +47,7 @@
         <div class="row">
             <div class="sidebar col-sm-3 col-md-2">
                 <ul class="nav nav-sidebar">
-                    <li><a href="Index.html">Introduction</a></li>
+                    <li><a href="index.html">Introduction</a></li>
                     <li class="active"><a href="Data.html">Data</a></li>
                     <li class=""><a href="Statistics.html">Statistics</a></li>
                 </ul>
