--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="row">
             <div class="sidebar col-sm-3 col-md-2 ">
                 <ul class="nav nav-sidebar">
-                    <li class="active"><a href="Index.html">Introduction</a></li>
+                    <li class="active"><a href="index.html">Introduction</a></li>
                     <li class=""><a href="Data.html">Data</a></li>
                     <li class=""><a href="Statistics.html">Statistics</a></li>
                 </ul>
