--- a/Statistics.html
+++ b/Statistics.html
@@ -42,7 +42,7 @@
         <div class="row">
             <div class="sidebar col-sm-3 col-md-2">
                 <ul class="nav nav-sidebar">
-                    <li class=""><a href="Index.html">Introduction</a></li>
+                    <li class=""><a href="index.html">Introduction</a></li>
                     <li class=""><a href="Data.html">Data</a></li>
                     <li class="active"><a href="Statistics.html">Statistics</a></li>
                 </ul>
